# secgate

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_EN.md  pyproject.toml  requirements.txt  secgate  security-plan.md  shared.py
agent/: CLAUDE.md  app.py
agent/.chainlit/: config.toml
dashboard/: app.py  notifications.py  requirements.txt  start.sh
dashboard/templates/: index.html  services.html
gateway/: app.py  config.example.json  generate-nginx.py  setup-iptables.sh  sync-whitelist.sh
gateway/templates/: login.html
master/: __init__.py  ssh_manager.py
packaging/: build-pip.sh  build.sh  install.sh  uninstall.sh
scanner/: __init__.py  manager.py  storage.py
scanner/rules/: __init__.py  loader.py  secret_rules.yaml
scanner/scanners/: __init__.py  base.py  input_guard.py  outconn.py  sca.py  secret_scan.py  web_vuln.py
src/secgate_pkg/: __init__.py  __main__.py  cli.py
