[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secgate"
dynamic = ["version"]
description = "All-in-one Linux server security gateway: auth gateway + attack monitoring + vulnerability scanning + AI assistant in ~120MB RAM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "zzmlb", email = "zzmlb@users.noreply.github.com"},
]
keywords = ["security", "gateway", "firewall", "fail2ban", "linux", "server", "monitoring", "vulnerability-scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "flask>=3.0",
    "psutil>=5.9",
    "requests>=2.28",
    "itsdangerous>=2.0",
    "pyyaml>=6.0",
    "gunicorn>=21.0",
]

[project.optional-dependencies]
agent = ["chainlit>=2.0"]

[project.urls]
Homepage = "https://github.com/zzmlb/secgate"
Repository = "https://github.com/zzmlb/secgate"
Issues = "https://github.com/zzmlb/secgate/issues"

[project.scripts]
secgate = "secgate_pkg.cli:main"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
secgate_pkg = ["project/**/*"]
